--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     "html-webpack-plugin": "^4.0.4",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "prettier": "^2.0.4",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
